Ported to v0.1 of asm+C buildable kernel

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,13 @@
 *.idb
 *.pdb
 
-# ISOs and BINs
+# ISOs and BINs and other gunk
 *.iso
 *.bin
+*.id*
+*.til
+*.nam
+*.kernel
 
 # Kernel Module Compile Results
 *.mod*
