Fix: build script and makefiles for kernel + libc

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -66,10 +66,10 @@ libk.a: $(LIBK_OBJS)
 	$(AR) rcs $@ $(LIBK_OBJS)
 
 .c.o:
-	$(CC) -MD -c --sysroot=$SYSROOT -isystem=$INCLUDEDIR $< -o $@ -std=gnu11 $(CFLAGS) $(CPPFLAGS)
+	$(CC) -MD -c --sysroot=$(SYSROOT) -isystem=$(INCLUDEDIR) $< -o $@ -std=gnu11 $(CFLAGS) $(CPPFLAGS)
 
 .c.libk.o:
-	$(CC) -MD -c $< -o $@ -std=gnu11 $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
+	$(CC) -MD --sysroot=$(SYSROOT) -isystem=$(INCLUDEDIR) -c $< -o $@ -std=gnu11 $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
 
 .asm.libk.o:
 	$(AS) $(ASFLAGS) $< -o $@
