--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -9,4 +9,6 @@ KERNEL_ARCH_LIBS=
 
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o\
-$(ARCHDIR)/kernel.o
+$(ARCHDIR)/kernel.o\
+$(ARCHDIR)/interrupts.o\
+$(ARCHDIR)/tty.o\
