Some structural improvements. Added sprintf/snprintf and consolidated implemenations. Added v1 of serial kernel trace function and macro.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -37,6 +37,8 @@ kernel/interrupts.o \
 kernel/clock.o \
 kernel/cpu.o \
 kernel/paging.o \
+kernel/serial.o \
+kernel/ktrace.o \
 
 OBJS=\
 $(ARCHDIR)/crti.o \
