--- a/libc/Makefile
+++ b/libc/Makefile
@@ -29,7 +29,7 @@ LIBK_CPPFLAGS:=$(LIBK_CPPFLAGS) $(KERNEL_ARCH_CPPFLAGS)
 
 FREEOBJS=\
 $(ARCH_FREEOBJS) \
-stdio/printf.o \
+stdio/print.o \
 stdio/putchar.o \
 stdio/puts.o \
 stdlib/abort.o \
