--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -8,7 +8,7 @@ KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
 
 KERNEL_ARCH_OBJS=\
-$(ARCHDIR)/boot.o\
+$(ARCHDIR)/kernel_loader.o\
 $(ARCHDIR)/kernel.o\
 $(ARCHDIR)/interrupts.o\
 $(ARCHDIR)/tty.o\
