--- a/libc/Makefile
+++ b/libc/Makefile
@@ -33,6 +33,7 @@ stdio/print.o \
 stdio/putchar.o \
 stdio/puts.o \
 stdlib/abort.o \
+stdlib/memory.o \
 string/memcmp.o \
 string/memcpy.o \
 string/memmove.o \
