--- a/lab/lab.vcxproj.filters
+++ b/lab/lab.vcxproj.filters
@@ -23,16 +23,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\kernel\kernel\arena_allocator.h">
-      <Filter>kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="..\kernel\kernel\collections.h">
-      <Filter>kernel</Filter>
-    </ClInclude>
     <ClInclude Include="..\kernel\include\jos.h">
       <Filter>kernel</Filter>
     </ClInclude>
     <ClInclude Include="..\kernel\include\kernel\kernel.h">
+      <Filter>kernel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\kernel\include\arena_allocator.h">
+      <Filter>kernel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\kernel\include\collections.h">
+      <Filter>kernel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\kernel\include\fixed_allocator.h">
       <Filter>kernel</Filter>
     </ClInclude>
   </ItemGroup>
