Moved out dedicated task switching and yield code to separate task.asm and normalised some stack setup and handling.

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -11,4 +11,5 @@ KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/kernel_loader.o\
 $(ARCHDIR)/kernel.o\
 $(ARCHDIR)/interrupts.o\
+$(ARCHDIR)/tasks.o\
 $(ARCHDIR)/tty.o\
