--- a/lab/lab.vcxproj
+++ b/lab/lab.vcxproj
@@ -138,6 +138,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\libc\stdio\print.c" />
+    <ClCompile Include="..\libc\stdio\putchar.c" />
+    <ClCompile Include="..\libc\stdio\puts.c" />
     <ClCompile Include="lab.c" />
   </ItemGroup>
   <ItemGroup>
@@ -145,7 +148,7 @@
     <ClInclude Include="..\kernel\include\collections.h" />
     <ClInclude Include="..\kernel\include\fixed_allocator.h" />
     <ClInclude Include="..\kernel\include\jos.h" />
-    <ClInclude Include="..\kernel\include\kernel\kernel.h" />
+    <ClInclude Include="..\libc\libc_internal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
