Fix: (v/sn)printf bug causing spurious "print as binary" output in traces. Changed traces to use ticks-since-boot instead of ms (TBD).

--- a/lab/lab.vcxproj
+++ b/lab/lab.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\kernel\kernel\ktrace.c" />
     <ClCompile Include="..\libc\stdio\print.c" />
     <ClCompile Include="..\libc\stdio\putchar.c" />
     <ClCompile Include="..\libc\stdio\puts.c" />
