Split output_console work into separate header, started adding support for printf->console->driver interface.

--- a/lab/lab.vcxproj
+++ b/lab/lab.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="..\kernel\include\collections.h" />
     <ClInclude Include="..\kernel\include\fixed_allocator.h" />
     <ClInclude Include="..\kernel\include\jos.h" />
+    <ClInclude Include="..\kernel\include\kernel\output_console.h" />
     <ClInclude Include="..\libc\libc_internal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
