Integrated output_console (not complete), cleaned up stdio, added basic vga driver logic. Fix: don't start clock if running on too slow hardware, or if frequency calculations are garbage (Bochs)

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -12,4 +12,4 @@ $(ARCHDIR)/kernel_loader.o\
 $(ARCHDIR)/kernel.o\
 $(ARCHDIR)/interrupts.o\
 $(ARCHDIR)/tasks.o\
-$(ARCHDIR)/tty.o\
+$(ARCHDIR)/vga.o\
