--- a/lab/lab.vcxproj
+++ b/lab/lab.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\kernel\arch\i386\vga.c" />
+    <ClCompile Include="..\kernel\kernel\cpu_core.c" />
     <ClCompile Include="..\kernel\kernel\ktrace.c" />
     <ClCompile Include="..\kernel\kernel\output_console.c" />
     <ClCompile Include="..\libc\stdio\print.c" />
