--- a/lab/lab.vcxproj
+++ b/lab/lab.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\kernel\arch\i386\vga.c" />
+    <ClCompile Include="..\kernel\kernel\hex_dump.c" />
     <ClCompile Include="..\kernel\kernel\ktrace.c" />
     <ClCompile Include="..\kernel\kernel\output_console.c" />
     <ClCompile Include="..\libc\stdio\print.c" />
@@ -151,6 +152,7 @@
     <ClInclude Include="..\kernel\include\fixed_allocator.h" />
     <ClInclude Include="..\kernel\include\jos.h" />
     <ClInclude Include="..\kernel\include\kernel\output_console.h" />
+    <ClInclude Include="..\kernel\include\hex_dump.h" />
     <ClInclude Include="..\libc\libc_internal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
